# porous-media-simulator

./: Dockerfile.diffusivity  README.md  SOLUTION-1-DEPLOYMENT.md  TROUBLESHOOTING.md  build-binaries.sh  deploy.sh  deployment.md  diagnose-deployment.js  fluid_sim  input.txt  next.config.ts  package-lock.json  package.json  requirements.txt  start-production.sh  start.sh  test-api.js  test-cuda-setup.js  test-deployment.js  test-proxy.js  test-railway-api.js  test-railway-backend.js  test_input.txt  vercel.json
EffectiveDiffusivityFVM-main/: CMakeLists.txt  LICENSE.txt  README.md
EffectiveDiffusivityFVM-main/Deff2DGPU/: Deff2D.cuh
EffectiveDiffusivityFVM-main/Example Inputs/: contourD.py  input2D_SS.txt  input2D_Tau.txt  input3D_SS.txt  input3D_Tau.txt  inputTSSD.txt
EffectiveDiffusivityFVM-main/lib/: constants.cpp  datastructures.cpp
EffectiveDiffusivityFVM-main/src/SubModels/Migration/: Migration.cuh  inputMig.txt
EffectiveDiffusivityFVM-main/src/SubModels/TransientSweepSimulatedDiffusimetry/: TSSD.cu  TSSD.cuh  inputTSSD.txt
EffectiveDiffusivityFVM-main/src_GPU/: helper.cuh  input.txt  main.cu
src/app/: layout.tsx  page.tsx
src/app/api/health/: route.ts
src/app/api/process-diffusivity/: route.ts
src/app/api/process-image/: route.ts
src/app/api/simulate/: route.ts
src/app/commands/: page.tsx
src/app/dashboard/: page.tsx
src/components/: CommandsSection.tsx  ComputerComponent.tsx  CreditsSection.tsx  PermeabilityResultsCard.tsx  fluid-blob.tsx  theme-toggle.tsx
src/components/ui/: button.tsx
src/lib/: config.ts
